<resources>
    <string name="app_name">LostfoundIITP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="Rollno">RollNo</string>
    <string name="full_name">Full Name</string>
    <string name="description">Description</string>
    <string name="Message">Message</string>
    <string name="select_images">select images</string>
    <string name="submit">submit</string>
</resources>